# photon-mapping

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
extlibs/libssrckdtree-1.0.8/: CHANGES  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
perma_bins/: photon_mapping_ubuntu64
src/: color.hpp  geometry.hpp  global_parameters.hpp  image.cpp  image.hpp  main.cpp  our_renderer.hpp  scene.hpp
src/cameras/: conic_camera.cpp  conic_camera.hpp  planar_camera.hpp
src/launchables/: launchable.cpp  launchable.hpp  ray.hpp
src/lights/: coherent_light_source.hpp  radiant_object.hpp  radiant_volume.hpp
src/parsers/: parser.hpp  parser_yaml.cpp  parser_yaml.hpp
src/raytracing/: photon_map.hpp  photon_mapper.cpp  photon_mapper.hpp  photon_mapping_based.cpp  photon_mapping_based.hpp  photon_nearer_from_naive.hpp  raytracer.hpp
src/shapes/: parallelepiped.cpp  parallelepiped.hpp  plane.cpp  plane.hpp  shape.hpp  sphere.cpp  sphere.hpp  surface.hpp
src/textures/: bitmap.hpp  checkers.cpp  texture.hpp
src_parallel/: color.hpp  geometry.hpp  global_parameters.cpp  global_parameters.hpp  image.cpp  image.hpp  main.cpp  our_renderer.hpp  scene.hpp
src_parallel/cameras/: camera.hpp  conic_camera.cpp  conic_camera.hpp  planar_camera.cpp  planar_camera.hpp
src_parallel/launchables/: photon.hpp
src_parallel/lights/: global_lighting.hpp  hemispherical_source.cpp  (+6 more)
tests/: cornel_box copy.txt  cornel_box.txt  cornel_box_2 copy.txt  cornel_box_2.1.txt  cornel_box_2.2.txt  cornel_box_2.txt  result_pm.tga  yam copy.txt  yam.txt  yam2.txt
(+276 files in other folders)
